# mbot

./: .gitignore  CMakeLists.txt
api/: infastructure_facade.hpp  logger_interface.hpp  module_interface.hpp  string_utils.hpp
cmake/: version_detect.cmake
include/: exception.hpp
include/core/: bot.hpp  command_manager.hpp  module_manager.hpp
include/utils/: log_manager.hpp  logger.hpp  shared_library.hpp  thread_balancer.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  bot.cpp  command_manager.cpp  main.cpp
src/utils/: CMakeLists.txt  log_manager.cpp  logger.cpp  logger.hpp  shared_library.cpp  thread_balancer.cpp
